@@ -13,6 +13,8 @@ $;FRAME$;=1
 $;REGIONS$;=
 ;; used in the base name in all new features IDs generated
 $;PROJECT_NAME$;=$;PROJECT$;
+;; delete any fasta files that are not polypeptide sequences
+$;CLEANUP$;=0
 
 [input]
 ;; input file format should be single sequence fasta file(s)
@@ -34,6 +36,7 @@ $;COMPONENT_NAME$; = translate_sequence
 $;DESCRIPTION$; = none
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
+$;SKIP_WF_COMMAND$; = 
 
 ;The version,revision,tag here is set by an interpolated CVS tag
 $;VERSION$; = 2.0
